--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div::-webkit-scrollbar {
+  width: 2px;
+}
+div::-webkit-scrollbar-track {
+  -webkit-box-shadow: gray;
+}
+div::-webkit-scrollbar-thumb {
+  background-color: gray;
+  outline: 1px solid gray;
+  border-radius: 50%;
+}
